<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <LinearLayout
            android:id="@+id/log_manager_switch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_manager_switch_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/log_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchMinWidth="100dp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/log_manager_limit_size"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_manager_limit_size"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/log_limit_size_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/log_limit_size_spinner_values" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/log_manager_log_clear"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_manager_log_clear"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/log_manager_log_clear_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_manager_clear_btn" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_manager_bugreport_clear"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/log_manager_bugreport_clear_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_manager_clear_btn" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_manager_bugreport_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/log_bugreport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_manager_bugreport_run" />

        </LinearLayout>

        <TextView
            android:id="@+id/log_manager_bugreport_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|left"
            android:singleLine="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_manager_bugreport_move_to_sdcard"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/log_manager_bugreport_move_to_sdcard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_manager_bugreport_move_to_sdcard_btn" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_manager_bugreport_view"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/log_manager_bugreport_view_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_manager_view_btn" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_manager_crash_info_upload"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/log_manager_crash_info_upload_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchMinWidth="100dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/log_manager_crash_info_upload_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/log_manager_crash_info_save_url_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_manager_crash_info_save_url" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
